Colaboratory를 통해 생성됨

--- a/mean_reversion/mean_reversion.ipynb
+++ b/mean_reversion/mean_reversion.ipynb
@@ -42,9 +42,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 35
         },
-        "outputId": "79c3df1b-6b34-49ee-bd94-89071bc2779e"
+        "outputId": "35ba358a-6015-4b67-fec4-1f5d0669a272"
       },
       "source": [
         "import numpy as np\n",
@@ -54,16 +54,12 @@
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /gdrive\n"
+            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -84,9 +80,46 @@
         "\n",
         "\"\"\"\n",
         "\n",
+        "\n",
+        "#import price data\n",
         "with open('/gdrive/My Drive/대학원 2학기/딥러닝/Deeplearning_pj/DL_final_proj/data/daily_price_small.json') as f:\n",
         "    price_json = json.load(f)\n",
-        "price_s = pd.read_json(price_json)"
+        "price_s = pd.read_json(price_json)\n",
+        "\"\"\"\n",
+        "\n",
+        "with open('/gdrive/My Drive/대학원 2학기/딥러닝/Deeplearning_pj/DL_final_proj/data/daily_price.json') as f:\n",
+        "    price_json = json.load(f)\n",
+        "price_s = pd.read_json(price_json)\n",
+        "\"\"\"\n",
+        "\n",
+        "#import cluster data; industry code\n",
+        "with open('/gdrive/My Drive/대학원 2학기/딥러닝/Deeplearning_pj/DL_final_proj/data/industry_code.json') as f:\n",
+        "    industry_json = json.load(f)\n",
+        "industry_s = pd.read_json(industry_json)\n",
+        "\n",
+        "#Del off-days \n",
+        "\n",
+        "#idx of double \n",
+        "double_idx = np.full(len(price_s.index), False, dtype = bool)\n",
+        "\n",
+        "for i in range(len(price_s.index)) :\n",
+        "    oneday_arr = price_s.values[i]\n",
+        "  \n",
+        "    if i ==0 :\n",
+        "        pre_arr = oneday_arr\n",
+        "        continue ;\n",
+        "    #get non np array for calc norm distance btw pre & curr day return \n",
+        "    nz_idx = np.isnan(oneday_arr)\n",
+        "\n",
+        "    if np.linalg.norm(oneday_arr[~nz_idx]  - pre_arr[~nz_idx]) < 0.001 :\n",
+        "        double_idx[i] = True\n",
+        "        \n",
+        "\n",
+        "    pre_arr = oneday_arr\n",
+        "\n",
+        "# Extract only working days\n",
+        "price_s = price_s.loc[price_s.index[~double_idx],:]\n",
+        "industry_s = industry_s.loc[industry_s.index[~double_idx],:]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,13 +127,295 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EqhKUjICgcUS",
+        "id": "GUgi4dfDc9ox",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "#re-sizeing industry_s\n",
+        "dump_df = price_s.copy()\n",
+        "for col in price_s.columns :\n",
+        "    dump_df[col] = industry_s[col]\n",
+        "industry_s = dump_df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1n6SEPF6Q3Km",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# there are some anormaly data with float and int\n",
+        "for column in industry_s.columns:\n",
+        "    industry_s[column] = industry_s[column].apply(lambda x : np.nan if type(x) == int or type(x) == float else x )\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-VLTLr9MQ6oj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# get_industry_list \n",
+        "\n",
+        "df = pd.read_excel(\"/gdrive/My Drive/대학원 2학기/딥러닝/Deeplearning_pj/DL_final_proj/raw_data/Industry_code.xlsx\")\n",
+        "df.columns = df.iloc[7]\n",
+        "df = df[13:]\n",
+        "df = df.set_index('Symbol')\n",
+        "\n",
+        "for i in df.columns :\n",
+        "    if i == df.columns[0]:\n",
+        "        c = collections.Counter(df[i])\n",
+        "    c += collections.Counter(df[i])\n",
+        "\n",
+        "industry_list = [*c.keys()]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RMPGrU2_nES4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#industry_list\n",
+        "industry_list.remove(np.nan)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KXHOXIPmUMP6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#get loading dic \n",
+        "# \n",
+        "industry_dic = {}\n",
+        "for industry in industry_list :\n",
+        "    industry_dic.update({ industry :np.where(industry_s.values == industry, True, False)})\n",
+        "    #industry_dic.update({ industry :np.where(industry_s.values == industry, 1, 0)})\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l098D_CNZduE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for day in price_s.index :\n",
+        "    for \n",
+        "\n",
+        "\n",
+        "i = 12\n",
+        "day = portfolio_df.index[0]\n",
+        "daily_return_arr = price_s.values[i]\n",
+        "k_loading_arr = industry_dic['I.005'][i]\n",
+        "nz_idx = np.isnan(daily_return_arr)\n",
+        "\n",
+        "k_mean_re = np.nanmean(daily_return_arr[k_loading_arr])\n",
+        "\n",
+        "#portfolio_df.loc[day, k_loading_arr] = -1 * (np.where(np.isnan(daily_return_arr[k_loading_arr]), 0, daily_return_arr[k_loading_arr]) - k_mean_re)\n",
+        "portfolio_df.loc[day, k_loading_arr] = -1 * (daily_return_arr[k_loading_arr]- k_mean_re)\n",
+        "portfolio_df.loc[day, nz_idx] = 0\n",
+        "\"\"\"\n",
+        "checking portfolio weight\n",
+        "#np.nansum(portfolio_df.loc[day, k_loading_arr].values)\n",
+        "sum(portfolio_df.loc[day, k_loading_arr].values)\n",
+        "\n",
+        "\"\"\"\n",
+        "#k_mean_re = (np.dot(daily_return_arr[~nz_idx],k_loading_arr[~nz_idx]))/np.nansum(k_loading_arr)\n",
+        " "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tILx2aTRj11t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cc93a3a2-d9e1-419e-841e-4566062c513f"
+      },
+      "source": [
+        "\n",
+        "#k_mean_re = np.nanmean(daily_return_arr[k_loading_arr])\n",
+        "#k_mean_re\n",
+        "#np.nansum(daily_return_arr[k_loading_arr] - k_mean_re)"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.440892098500626e-15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QKADz3rZjDT3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#make portfolio df with init zero\n",
+        "portfolio_df = price_s.copy()\n",
+        "for col in portfolio_df.columns:\n",
+        "    portfolio_df[col].values[:] = 0\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nc9qtnLshKL8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2ed41d5a-cc74-4f96-f5e4-6f3e260b19ff"
+      },
+      "source": [
+        "k_loading_arr"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vGsO61OtcI-i",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "price data랑 industry 데이터 종목 검토 필요\n",
+        "예상 시나리오 : price_s 가  필터링 된 종목일 것.\n",
+        "그러면 일단 price_small에 맞춰서  industry_loading matrix 재조정 필요.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VxojPSNjQU42",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "206fea0f-f4b7-4aff-c0e2-3e2023ac48e0"
+      },
+      "source": [
+        "type(temp_list[31])\n",
+        "#temp_list[0:100]\n"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EqhKUjICgcUS",
+        "colab_type": "code",
+        "outputId": "06f5c694-b187-45db-cb21-8072265365d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
         "#price_s = real_price \n",
-        "price_s.head(5)\n"
+        "price_s.head(5)\n",
+        "indumstry_s.head(5)\n",
+        "\n",
+        "\"\"\"\n",
+        "\"\"\""
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nfor i in industry_s.columns :\\n    if i == industry_s.columns[0]:\\n        c = collections.Counter(industry_s[i])\\n        continue ;\\n    c += collections.Counter(industry_s[i])\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PSx0e0ozMIOF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "industry_list = \n",
+        "loading_i = "
       ],
       "execution_count": 0,
       "outputs": []
@@ -177,7 +492,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 719
         },
         "outputId": "62c0e830-18b7-416c-ccf8-9507994cf113"
       },
